--- a/index.html
+++ b/index.html
@@ -83,3 +83,19 @@ image:
     Next
   {% endif %}
 </div><!-- /.pagination -->
+
+
+<script src="{{ site.baseurl }}/dest/jekyll-search.js" type="text/javascript"></script>
+
+
+<script type="text/javascript">
+  SimpleJekyllSearch({
+    searchInput: document.getElementById('search-input'),
+    resultsContainer: document.getElementById('results-container'),
+    json: '{{ site.baseurl }}/search.json',
+    searchResultTemplate: '<li><a href="{url}" title="{desc}">{title}</a></li>',
+    noResultsText: 'No results found',
+    limit: 10,
+    fuzzy: false,
+  })
+</script>
