--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ image:
 </div><!-- /.pagination -->
 
 
-<script src="{{ site.baseurl }}/dest/jekyll-search.js" type="text/javascript"></script>
+<script src="{{ site.baseurl }}/assets/js/plugins/jekyll-search.js" type="text/javascript"></script>
 
 
 <script type="text/javascript">
