--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ image:
 
 <!-- Search form -->
 <div id="search-demo-container">
-    <input type="text" id="search-input" placeholder="search...">
+    <input type="text" id="search-input" placeholder="search">
     <ul id="results-container"></ul>
 </div>
 
@@ -96,6 +96,6 @@ image:
     searchResultTemplate: '<li><a href="{url}" title="{desc}">{title}</a></li>',
     noResultsText: 'No results found',
     limit: 10,
-    fuzzy: false,
+    fuzzy: true,
   })
 </script>
