--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ image:
 
 <!-- Search form -->
 <div id="search-demo-container">
-    <input type="text" id="search-input" placeholder="search">
+    <input type="text" id="search-input" placeholder="search..">
     <ul id="results-container"></ul>
 </div>
 
