--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ image:
 ---
 
 <!-- Search form -->
-<div id="search-demo-container">
+<p id="search-demo-container">
     <input type="text" id="search-input" placeholder="search..">
     <ul id="results-container"></ul>
-</div>
+</p>
 
 {% for post in paginator.posts %}
 <article class="hentry">
