--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@ image:
   {% endif %}
 </div><!-- /.pagination -->
 
-
 <script src="{{ site.baseurl }}/assets/js/plugins/jekyll-search.js" type="text/javascript"></script>
-
 
 <script type="text/javascript">
   SimpleJekyllSearch({
@@ -95,7 +93,7 @@ image:
     json: '{{ site.baseurl }}/search.json',
     searchResultTemplate: '<div class="search-result-block-container"><div class="search-result-block-title"><a href="{url}" title="Open {title}"><i class="fa fa-link"></i> {title}</a></div><div class="search-result-block-content">{excerpt}</div>',
     noResultsText: '<div class="search-result-block-container"><div class="search-result-block-title"><i class="fa fa-exclamation-triangle"></i> No results were found..</div><div class="search-result-block-content">Try to search another keyword.</div>',
-    limit: 10,
-    fuzzy: true,
+    limit: 15,
+    fuzzy: true
   })
 </script>
