--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ image:
     resultsContainer: document.getElementById('results-container'),
     json: '{{ site.baseurl }}/search.json',
     searchResultTemplate: '<div class="search-result-block-container"><div class="search-result-block-title"><a href="{url}" title="Open {title}"><i class="fa fa-link"></i> {title}</a></div><div class="search-result-block-content">{excerpt}</div>',
-    noResultsText: '<div class="search-result-block-container"><div class="search-result-block-title"><i class="fa fa-exclamation-triangle"></i> No results were found..</div><div class="search-result-block-content">Try to search another keyword. The search algorithm tries to match your input to the following post parameters: title, category, tags, url, date, excerpt. Make sure you pass the right keyword according to your needs.<br />You can search for a date as well. The accepted format is: yyyy-mm-dd.</div>',
+    noResultsText: '<div class="search-result-block-container"><div class="search-result-block-title"><i class="fa fa-exclamation-triangle"></i> No results were found..</div><div class="search-result-block-content">The search algorithm tries to match your input to the following post parameters: <ul><li>title<li></li>category<li></li>tags<li></li>url<li></li>date<li></li>excerpt</li></ul>Make sure you pass the right keyword according to your needs.<br /><br />You can search for a date as well. The accepted format is: yyyy-mm-dd.</div>',
     limit: 15,
     fuzzy: true
   })
