--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ image:
 
 <!-- Search form -->
 <div id="search-container">
-    <input type="text" id="search-input" placeholder="search..">
+    <input type="text" id="search-input" placeholder="search.." onkeydown="onkeypressed(event, this);">
     <div id="results-container"></div>
 </div>
 
@@ -96,4 +96,12 @@ image:
     limit: 15,
     fuzzy: true
   })
+
+  function onkeypressed(evt, input) {
+    var code = evt.charCode || evt.keyCode;
+    if (code == 27) {
+        input.value = '';
+        input.blur();
+    }
+  }
 </script>
