event handler test

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ image:
     var code = evt.charCode || evt.keyCode;
     if (code == 27) {
         input.value = '';
+        input.onchange();
         input.blur();
     }
   }
