--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ image:
     if (code == 27) {
         input.value = '';
         input.onchange();
-        input.blur();
+        input.focusout();
     }
   }
 </script>
