--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ image:
 
 <!-- Search form -->
 <div id="search-container">
-    <input type="text" id="search-input" placeholder="search.." onkeydown="onkeypressed(event, this);">
+    <input type="text" id="search-input" placeholder="search.." onkeydown="keyPressed(event)">
     <div id="results-container"></div>
 </div>
 
@@ -97,12 +97,11 @@ image:
     fuzzy: true
   })
 
-  function onkeypressed(evt, input) {
-    var code = evt.charCode || evt.keyCode;
-    if (code == 27) {
-        input.value = '';
-        input.refresh();
-        input.blur();
-    }
+  function keyPressed(evt) {
+   if (evt.keyCode == 27) {
+      //clear your textbox content here...
+      document.getElementById("search-input").value = '';
+      ducument.getElementById("search-input").blur();
+   }
   }
 </script>
