--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ image:
    if (evt.keyCode == 27) {
       //clear your textbox content here...
       document.getElementById("search-input").value = '';
-      ducument.getElementById("search-input").blur();
+      document.getElementById("search-input").blur();
    }
   }
 </script>
