--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ image:
           if($('.focused').prev('.focusable').length)
               $('.focused').removeClass('focused').prev('.focusable').focus().addClass('focused');
       }
-      if (e.keyCode == 40) { // down
+      if (e.keyCode == 40 || e.keyCode == 9) { // down
           if($('.focused').next('.focusable').length)
               $('.focused').removeClass('focused').next('.focusable').focus().addClass('focused');
       }
