--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ image:
 
 <!-- Search form -->
 <div id="search-container">
-    <input type="text" class="focusable focused" id="search-input" placeholder="search.." onkeydown="keyPressed(event)">
+    <input type="text" id="search-input" placeholder="search..">
     <div id="results-container"></div>
 </div>
 
