--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ image:
   }
 
 
-  $(window).keydown(function (e) {
+  $(window).keyup(function (e) {
       if (e.which === 40) { // down
           select_next();
       } else if (e.which === 38) { // up
