--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ image:
       } else if (e.which === 13) { // enter
           goto_current_link();
       } else {
-          invalidate_selection();
+          //invalidate_selection();
       }
   });
 
