--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ image:
   var current = null;
 
   function get_next() {
-      if (current == null) {
+      if (!current.isa('.focusable')) {
           current = $('.focusable').first();
       } else {
           if (!current.is($('.focusable').last())) {
@@ -111,7 +111,7 @@ image:
   }
 
   function get_prev() {
-      if (current == null) {
+      if (!current.isa('.focusable')) {
           current = $('.focusable').last();
       } else {
           if (!current.is($('.focusable').first())) {
@@ -122,21 +122,21 @@ image:
   }
 
   function invalidate_selection() {
-      if (current != null) {
+      if (!current.isa('.focusable')) {
           current.removeClass('selected');
           current = null;
       }
   }
 
   function select_next() {
-      if (current != null) {
+      if (!current.isa('.focusable')) {
           current.removeClass('selected');
       }
       current = get_next().addClass('selected');
   }
 
   function select_prev() {
-      if (current != null) {
+      if (!current.isa('.focusable')) {
           current.removeClass('selected');
       }
       current = get_prev().addClass('selected');
