--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ image:
     fuzzy: true
   })
 
-  var current = null;
+  var current = [];
 
   function get_next() {
       if (!current.is('.focusable')) {
