--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ image:
     fuzzy: true
   })
 
-  var current = [];
+  var current = null;
 
   function get_next() {
       if (current != null && !$(current).is('.focusable')) {
