--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@ image:
             invalidate_selection();
         } else if (e.which === 13) { // enter
             goto_current_link();
+            finishSearch();
         } else {
             invalidate_selection();
         }
