--- a/index.html
+++ b/index.html
@@ -84,4 +84,4 @@ image:
   {% endif %}
 </div><!-- /.pagination -->
 
-<script src="{{ site.baseurl }}/assets/js/plugins/jekyll-search.js" type="text/javascript"></script>
+<script src="/assets/js/plugins/jekyll-search.js" type="text/javascript"></script>
