--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: post-index
-title: Latest Posts
+title: Engineering with passion
 description: "Describe this nonsense."
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
