--- a/python/fuzzy-search-and-sort-algorithm/index.html
+++ b/python/fuzzy-search-and-sort-algorithm/index.html
@@ -9,9 +9,9 @@
       <title>tiborsimon.io</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--[if lte IE 8]><script src="/theme/js/ie/html5shiv.js"></script><![endif]-->
-    <link rel="stylesheet" href="/theme/css/main.css" />
-    <!--[if lte IE 8]><link rel="stylesheet" href="/theme/css/ie8.css" /><![endif]-->
+    <!--[if lte IE 8]><script src="http://tiborsimon.io/theme/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="http://tiborsimon.io/theme/css/main.css" />
+    <!--[if lte IE 8]><link rel="stylesheet" href="http://tiborsimon.io/theme/css/ie8.css" /><![endif]-->
 
   <meta name="author" content="Tibor Simon" />
   <meta name="keywords" content="" />
@@ -21,7 +21,7 @@
   <meta property="og:site_name" content="tiborsimon.io" />
   <meta property="og:type" content="article"/>
   <meta property="og:title" content="Fuzzy search and sort algorithm"/>
-  <meta property="og:url" content="/python/fuzzy-search-and-sort-algorithm/"/>
+  <meta property="og:url" content="http://tiborsimon.io/python/fuzzy-search-and-sort-algorithm/"/>
   <meta property="og:description" content="What do you do, if your users may not know exactly what they are looking for while typing into a search field. You can try to provide all relevant matches based on the typed in characters. Time to search in a fuzzy way."/>
   <meta property="article:published_time" content="2015-10-25" />
   <meta property="article:section" content="python" />
@@ -46,11 +46,11 @@
     <!-- Nav -->
       <nav id="nav">
         <ul>
-          <li class="current"><a href="/index.html">Home</a></li>
-          <li><a href="/archives.html">Archives</a></li>
-          <li><a href="/index.html#portfolio">Portfolio</a></li>
-          <!-- <li><a href="/worklog.html">Worklog</a></li> -->
-          <li><a href="/index.html#about">About</a></li>
+          <li class="current"><a href="http://tiborsimon.io/index.html">Home</a></li>
+          <li><a href="http://tiborsimon.io/archives.html">Archives</a></li>
+          <li><a href="http://tiborsimon.io/index.html#portfolio">Portfolio</a></li>
+          <!-- <li><a href="http://tiborsimon.io/worklog.html">Worklog</a></li> -->
+          <li><a href="http://tiborsimon.io/index.html#about">About</a></li>
         </ul>
       </nav>
 
@@ -76,11 +76,11 @@
 </div><div class="article-categories">
   <!-- CATEGORY -->
   <i class="fa fa-folder-open-o"></i>
-  <a href="/category/python.html">python</a>
+  <a href="http://tiborsimon.io/category/python.html">python</a>
 
   <!-- TAGS -->
       <i class="fa fa-tags padded-icon"></i>
-          <a href="/tag/fuzzy.html">fuzzy</a>,           <a href="/tag/search.html">search</a>,           <a href="/tag/sorting.html">sorting</a>
+          <a href="http://tiborsimon.io/tag/fuzzy.html">fuzzy</a>,           <a href="http://tiborsimon.io/tag/search.html">search</a>,           <a href="http://tiborsimon.io/tag/sorting.html">sorting</a>
   <!-- SERIES -->
 
   <!-- GITHUB -->
@@ -257,7 +257,7 @@ def _sort_result_list(result):
 <script>
 
     var disqus_config = function () {
-        this.page.url = "/python/fuzzy-search-and-sort-algorithm/";
+        this.page.url = "http://tiborsimon.io/python/fuzzy-search-and-sort-algorithm/";
         this.page.identifier = "tiborsimon-article-fuzzy-search-and-sort-algorithm";
     };
 
@@ -280,7 +280,7 @@ s.setAttribute('data-timestamp', +new Date());
   <!-- Sidebar -->
     <aside id="sidebar">
       <div class="box">
-        <img src="/images/tibor4.jpg" style="border: 3px solid #ddd; margin: 0 auto" width=300 alt="Image of Tibor Simon" />
+        <img src="http://tiborsimon.io/images/tibor4.jpg" style="border: 3px solid #ddd; margin: 0 auto" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
       </div>
       <div class="box">
@@ -290,103 +290,103 @@ s.setAttribute('data-timestamp', +new Date());
   <h2 class="widget-title">Tag Cloud</h2>
   <div class="tagcloud">
       <span class="tagcloud-button">
-        <a href="/tag/LaTEX.html">#LaTEX</a>
+        <a href="http://tiborsimon.io/tag/LaTEX.html">#LaTEX</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/accelerometer.html">#accelerometer</a>
+        <a href="http://tiborsimon.io/tag/accelerometer.html">#accelerometer</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/basics.html">#basics</a>
+        <a href="http://tiborsimon.io/tag/basics.html">#basics</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/bootstrap.html">#bootstrap</a>
+        <a href="http://tiborsimon.io/tag/bootstrap.html">#bootstrap</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/chart.html">#chart</a>
+        <a href="http://tiborsimon.io/tag/chart.html">#chart</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/device.html">#device</a>
+        <a href="http://tiborsimon.io/tag/device.html">#device</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/dsp.html">#dsp</a>
+        <a href="http://tiborsimon.io/tag/dsp.html">#dsp</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/dunlop.html">#dunlop</a>
+        <a href="http://tiborsimon.io/tag/dunlop.html">#dunlop</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/embedded.html">#embedded</a>
+        <a href="http://tiborsimon.io/tag/embedded.html">#embedded</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/equation.html">#equation</a>
+        <a href="http://tiborsimon.io/tag/equation.html">#equation</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/fuzzy.html">#fuzzy</a>
+        <a href="http://tiborsimon.io/tag/fuzzy.html">#fuzzy</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/game.html">#game</a>
+        <a href="http://tiborsimon.io/tag/game.html">#game</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/guitar.html">#guitar</a>
+        <a href="http://tiborsimon.io/tag/guitar.html">#guitar</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/hack.html">#hack</a>
+        <a href="http://tiborsimon.io/tag/hack.html">#hack</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/ios.html">#ios</a>
+        <a href="http://tiborsimon.io/tag/ios.html">#ios</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/java.html">#java</a>
+        <a href="http://tiborsimon.io/tag/java.html">#java</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/javascript.html">#javascript</a>
+        <a href="http://tiborsimon.io/tag/javascript.html">#javascript</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/jinja2.html">#jinja2</a>
+        <a href="http://tiborsimon.io/tag/jinja2.html">#jinja2</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/lists.html">#lists</a>
+        <a href="http://tiborsimon.io/tag/lists.html">#lists</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/math.html">#math</a>
+        <a href="http://tiborsimon.io/tag/math.html">#math</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/parameter.html">#parameter</a>
+        <a href="http://tiborsimon.io/tag/parameter.html">#parameter</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/pelican.html">#pelican</a>
+        <a href="http://tiborsimon.io/tag/pelican.html">#pelican</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/permutation.html">#permutation</a>
+        <a href="http://tiborsimon.io/tag/permutation.html">#permutation</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/pick.html">#pick</a>
+        <a href="http://tiborsimon.io/tag/pick.html">#pick</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/regexp.html">#regexp</a>
+        <a href="http://tiborsimon.io/tag/regexp.html">#regexp</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/search.html">#search</a>
+        <a href="http://tiborsimon.io/tag/search.html">#search</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/signals.html">#signals</a>
+        <a href="http://tiborsimon.io/tag/signals.html">#signals</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/sorting.html">#sorting</a>
+        <a href="http://tiborsimon.io/tag/sorting.html">#sorting</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/soup.html">#soup</a>
+        <a href="http://tiborsimon.io/tag/soup.html">#soup</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/swift.html">#swift</a>
+        <a href="http://tiborsimon.io/tag/swift.html">#swift</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/tools.html">#tools</a>
+        <a href="http://tiborsimon.io/tag/tools.html">#tools</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/tortextime.html">#tortextime</a>
+        <a href="http://tiborsimon.io/tag/tortextime.html">#tortextime</a>
       </span>
       <span class="tagcloud-button">
-        <a href="/tag/web.html">#web</a>
+        <a href="http://tiborsimon.io/tag/web.html">#web</a>
       </span>
   </div>
 </aside>
@@ -395,14 +395,14 @@ s.setAttribute('data-timestamp', +new Date());
 <aside class="category-list">
   <h2 class="widget-title">Categories</h2>
   <ul>
-      <li><a href="/category/dsp.html" title="Architecture Category Posts">dsp</a> (1)</li>
-      <li><a href="/category/embedded.html" title="Architecture Category Posts">embedded</a> (1)</li>
-      <li><a href="/category/guitar.html" title="Architecture Category Posts">guitar</a> (1)</li>
-      <li><a href="/category/ios.html" title="Architecture Category Posts">ios</a> (1)</li>
-      <li><a href="/category/programming.html" title="Architecture Category Posts">programming</a> (2)</li>
-      <li><a href="/category/python.html" title="Architecture Category Posts">python</a> (4)</li>
-      <li><a href="/category/tools.html" title="Architecture Category Posts">tools</a> (1)</li>
-      <li><a href="/category/web.html" title="Architecture Category Posts">web</a> (2)</li>
+      <li><a href="http://tiborsimon.io/category/dsp.html" title="Architecture Category Posts">dsp</a> (1)</li>
+      <li><a href="http://tiborsimon.io/category/embedded.html" title="Architecture Category Posts">embedded</a> (1)</li>
+      <li><a href="http://tiborsimon.io/category/guitar.html" title="Architecture Category Posts">guitar</a> (1)</li>
+      <li><a href="http://tiborsimon.io/category/ios.html" title="Architecture Category Posts">ios</a> (1)</li>
+      <li><a href="http://tiborsimon.io/category/programming.html" title="Architecture Category Posts">programming</a> (2)</li>
+      <li><a href="http://tiborsimon.io/category/python.html" title="Architecture Category Posts">python</a> (4)</li>
+      <li><a href="http://tiborsimon.io/category/tools.html" title="Architecture Category Posts">tools</a> (1)</li>
+      <li><a href="http://tiborsimon.io/category/web.html" title="Architecture Category Posts">web</a> (2)</li>
   </ul>
 </aside>
 <!-- .widget_categories -->      </div>
@@ -446,7 +446,7 @@ s.setAttribute('data-timestamp', +new Date());
     </div>
 
     <!-- Scripts -->
-      <script type="text/javascript" src="/theme/js/bundle.min.js" charset="utf-8"></script>
+      <script type="text/javascript" src="http://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8" async></script>
   <script type="text/javascript" src="http://tiborsimon.disqus.com/count.js" id="dsq-count-scr" async></script>
 
       <script>
@@ -461,7 +461,7 @@ s.setAttribute('data-timestamp', +new Date());
       </script>
 
       <!-- Go to www.addthis.com/dashboard to customize your tools -->
-      <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55feae79d6d0348d"></script>
+      <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-55feae79d6d0348d" async></script>
 
   </body>
 </html>
