--- a/web/chartjs-with-subtabbed-tabs/index.html
+++ b/web/chartjs-with-subtabbed-tabs/index.html
@@ -9,9 +9,9 @@
       <title>tiborsimon.io</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--[if lte IE 8]><script src="http://tiborsimon.io/theme/js/ie/html5shiv.js"></script><![endif]-->
-    <link rel="stylesheet" href="http://tiborsimon.io/theme/css/main.css" />
-    <!--[if lte IE 8]><link rel="stylesheet" href="http://tiborsimon.io/theme/css/ie8.css" /><![endif]-->
+    <!--[if lte IE 8]><script src="https://tiborsimon.io/theme/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="https://tiborsimon.io/theme/css/main.css" />
+    <!--[if lte IE 8]><link rel="stylesheet" href="https://tiborsimon.io/theme/css/ie8.css" /><![endif]-->
 
   <meta name="author" content="Tibor Simon" />
   <meta name="keywords" content="" />
@@ -21,7 +21,7 @@
   <meta property="og:site_name" content="tiborsimon.io" />
   <meta property="og:type" content="article"/>
   <meta property="og:title" content="Chart.js with subtabbed tabs"/>
-  <meta property="og:url" content="http://tiborsimon.io/web/chartjs-with-subtabbed-tabs/"/>
+  <meta property="og:url" content="https://tiborsimon.io/web/chartjs-with-subtabbed-tabs/"/>
   <meta property="og:description" content="Chart.js is a bit tricky to use if you have dynamic tabs on your site. How about having multiple tabs with multiple tabs in them? Things get serious."/>
   <meta property="article:published_time" content="2015-10-30" />
   <meta property="article:section" content="web" />
@@ -46,11 +46,11 @@
     <!-- Nav -->
       <nav id="nav">
         <ul>
-          <li class="current"><a href="http://tiborsimon.io/index.html">Home</a></li>
-          <li><a href="http://tiborsimon.io/archives.html">Archives</a></li>
-          <li><a href="http://tiborsimon.io/index.html#portfolio">Portfolio</a></li>
-          <!-- <li><a href="http://tiborsimon.io/worklog.html">Worklog</a></li> -->
-          <li><a href="http://tiborsimon.io/index.html#about">About</a></li>
+          <li class="current"><a href="https://tiborsimon.io/index.html">Home</a></li>
+          <li><a href="https://tiborsimon.io/archives.html">Archives</a></li>
+          <li><a href="https://tiborsimon.io/index.html#portfolio">Portfolio</a></li>
+          <!-- <li><a href="https://tiborsimon.io/worklog.html">Worklog</a></li> -->
+          <li><a href="https://tiborsimon.io/index.html#about">About</a></li>
         </ul>
       </nav>
 
@@ -76,11 +76,11 @@
 </div><div class="article-categories">
   <!-- CATEGORY -->
   <i class="fa fa-folder-open-o"></i>
-  <a href="http://tiborsimon.io/category/web.html">web</a>
+  <a href="https://tiborsimon.io/category/web.html">web</a>
 
   <!-- TAGS -->
       <i class="fa fa-tags padded-icon"></i>
-          <a href="http://tiborsimon.io/tag/javascript.html">javascript</a>,           <a href="http://tiborsimon.io/tag/chart.html">chart</a>,           <a href="http://tiborsimon.io/tag/bootstrap.html">bootstrap</a>
+          <a href="https://tiborsimon.io/tag/javascript.html">javascript</a>,           <a href="https://tiborsimon.io/tag/chart.html">chart</a>,           <a href="https://tiborsimon.io/tag/bootstrap.html">bootstrap</a>
   <!-- SERIES -->
 
   <!-- GITHUB -->
@@ -113,7 +113,7 @@ have left a tab, and it will be able to resume there.</p>
 <script>
 
     var disqus_config = function () {
-        this.page.url = "http://tiborsimon.io/web/chartjs-with-subtabbed-tabs/";
+        this.page.url = "https://tiborsimon.io/web/chartjs-with-subtabbed-tabs/";
         this.page.identifier = "tiborsimon-article-chartjs-with-subtabbed-tabs";
     };
 
@@ -136,7 +136,7 @@ s.setAttribute('data-timestamp', +new Date());
   <!-- Sidebar -->
     <aside id="sidebar">
       <div class="box">
-        <img src="http://tiborsimon.io/images/tibor4.jpg" style="border: 3px solid #ddd; margin: 0 auto" width=300 alt="Image of Tibor Simon" />
+        <img src="https://tiborsimon.io/images/tibor4.jpg" style="border: 3px solid #ddd; margin: 0 auto" width=300 alt="Image of Tibor Simon" />
         <p >Hi, my name is <b>Tibor Simon.</b> I am a graduated electrical engineer with a masters degree.  I live in Budapest, and I am currently working at Nokia Networks.</p>
       </div>
       <div class="box">
@@ -146,103 +146,103 @@ s.setAttribute('data-timestamp', +new Date());
   <h2 class="widget-title">Tag Cloud</h2>
   <div class="tagcloud">
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/LaTEX.html">#LaTEX</a>
+        <a href="https://tiborsimon.io/tag/LaTEX.html">#LaTEX</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/accelerometer.html">#accelerometer</a>
+        <a href="https://tiborsimon.io/tag/accelerometer.html">#accelerometer</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/basics.html">#basics</a>
+        <a href="https://tiborsimon.io/tag/basics.html">#basics</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/bootstrap.html">#bootstrap</a>
+        <a href="https://tiborsimon.io/tag/bootstrap.html">#bootstrap</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/chart.html">#chart</a>
+        <a href="https://tiborsimon.io/tag/chart.html">#chart</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/device.html">#device</a>
+        <a href="https://tiborsimon.io/tag/device.html">#device</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/dsp.html">#dsp</a>
+        <a href="https://tiborsimon.io/tag/dsp.html">#dsp</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/dunlop.html">#dunlop</a>
+        <a href="https://tiborsimon.io/tag/dunlop.html">#dunlop</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/embedded.html">#embedded</a>
+        <a href="https://tiborsimon.io/tag/embedded.html">#embedded</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/equation.html">#equation</a>
+        <a href="https://tiborsimon.io/tag/equation.html">#equation</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/fuzzy.html">#fuzzy</a>
+        <a href="https://tiborsimon.io/tag/fuzzy.html">#fuzzy</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/game.html">#game</a>
+        <a href="https://tiborsimon.io/tag/game.html">#game</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/guitar.html">#guitar</a>
+        <a href="https://tiborsimon.io/tag/guitar.html">#guitar</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/hack.html">#hack</a>
+        <a href="https://tiborsimon.io/tag/hack.html">#hack</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/ios.html">#ios</a>
+        <a href="https://tiborsimon.io/tag/ios.html">#ios</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/java.html">#java</a>
+        <a href="https://tiborsimon.io/tag/java.html">#java</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/javascript.html">#javascript</a>
+        <a href="https://tiborsimon.io/tag/javascript.html">#javascript</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/jinja2.html">#jinja2</a>
+        <a href="https://tiborsimon.io/tag/jinja2.html">#jinja2</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/lists.html">#lists</a>
+        <a href="https://tiborsimon.io/tag/lists.html">#lists</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/math.html">#math</a>
+        <a href="https://tiborsimon.io/tag/math.html">#math</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/parameter.html">#parameter</a>
+        <a href="https://tiborsimon.io/tag/parameter.html">#parameter</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/pelican.html">#pelican</a>
+        <a href="https://tiborsimon.io/tag/pelican.html">#pelican</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/permutation.html">#permutation</a>
+        <a href="https://tiborsimon.io/tag/permutation.html">#permutation</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/pick.html">#pick</a>
+        <a href="https://tiborsimon.io/tag/pick.html">#pick</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/regexp.html">#regexp</a>
+        <a href="https://tiborsimon.io/tag/regexp.html">#regexp</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/search.html">#search</a>
+        <a href="https://tiborsimon.io/tag/search.html">#search</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/signals.html">#signals</a>
+        <a href="https://tiborsimon.io/tag/signals.html">#signals</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/sorting.html">#sorting</a>
+        <a href="https://tiborsimon.io/tag/sorting.html">#sorting</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/soup.html">#soup</a>
+        <a href="https://tiborsimon.io/tag/soup.html">#soup</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/swift.html">#swift</a>
+        <a href="https://tiborsimon.io/tag/swift.html">#swift</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/tools.html">#tools</a>
+        <a href="https://tiborsimon.io/tag/tools.html">#tools</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/tortextime.html">#tortextime</a>
+        <a href="https://tiborsimon.io/tag/tortextime.html">#tortextime</a>
       </span>
       <span class="tagcloud-button">
-        <a href="http://tiborsimon.io/tag/web.html">#web</a>
+        <a href="https://tiborsimon.io/tag/web.html">#web</a>
       </span>
   </div>
 </aside>
@@ -251,14 +251,14 @@ s.setAttribute('data-timestamp', +new Date());
 <aside class="category-list">
   <h2 class="widget-title">Categories</h2>
   <ul>
-      <li><a href="http://tiborsimon.io/category/dsp.html" title="Architecture Category Posts">dsp</a> (1)</li>
-      <li><a href="http://tiborsimon.io/category/embedded.html" title="Architecture Category Posts">embedded</a> (1)</li>
-      <li><a href="http://tiborsimon.io/category/guitar.html" title="Architecture Category Posts">guitar</a> (1)</li>
-      <li><a href="http://tiborsimon.io/category/ios.html" title="Architecture Category Posts">ios</a> (1)</li>
-      <li><a href="http://tiborsimon.io/category/programming.html" title="Architecture Category Posts">programming</a> (2)</li>
-      <li><a href="http://tiborsimon.io/category/python.html" title="Architecture Category Posts">python</a> (4)</li>
-      <li><a href="http://tiborsimon.io/category/tools.html" title="Architecture Category Posts">tools</a> (1)</li>
-      <li><a href="http://tiborsimon.io/category/web.html" title="Architecture Category Posts">web</a> (2)</li>
+      <li><a href="https://tiborsimon.io/category/dsp.html" title="Architecture Category Posts">dsp</a> (1)</li>
+      <li><a href="https://tiborsimon.io/category/embedded.html" title="Architecture Category Posts">embedded</a> (1)</li>
+      <li><a href="https://tiborsimon.io/category/guitar.html" title="Architecture Category Posts">guitar</a> (1)</li>
+      <li><a href="https://tiborsimon.io/category/ios.html" title="Architecture Category Posts">ios</a> (1)</li>
+      <li><a href="https://tiborsimon.io/category/programming.html" title="Architecture Category Posts">programming</a> (2)</li>
+      <li><a href="https://tiborsimon.io/category/python.html" title="Architecture Category Posts">python</a> (4)</li>
+      <li><a href="https://tiborsimon.io/category/tools.html" title="Architecture Category Posts">tools</a> (1)</li>
+      <li><a href="https://tiborsimon.io/category/web.html" title="Architecture Category Posts">web</a> (2)</li>
   </ul>
 </aside>
 <!-- .widget_categories -->      </div>
@@ -302,7 +302,7 @@ s.setAttribute('data-timestamp', +new Date());
     </div>
 
     <!-- Scripts -->
-      <script type="text/javascript" src="http://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8" async></script>
+      <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8" async></script>
   <script type="text/javascript" src="http://tiborsimon.disqus.com/count.js" id="dsq-count-scr" async></script>
 
       <script>
