--- a/archives.html
+++ b/archives.html
@@ -256,7 +256,7 @@
       </div>
 
 <ul class="paginations">
-        <li class="pagination-button style2" style="opacity: 0"><i class="fa fa-angle-double-left"></i></li>
+        <li class="pagination-button hidden"><i class="fa fa-angle-double-left"></i></li>
             <a href="https://tiborsimon.io/archives.html#archives"><li class="pagination-button style1">1</li></a>
             <a href="https://tiborsimon.io/archives2.html#archives"><li class="pagination-button style2">2</li></a>
         <a href="https://tiborsimon.io/archives2.html#archives"><li class="pagination-button style2"><i class="fa fa-angle-double-right"></i></li></a>
