--- a/archives2.html
+++ b/archives2.html
@@ -189,7 +189,7 @@
         </li>
             <a href="https://tiborsimon.io/archives.html#archives"><li class="pagination-button style2">1</li></a>
             <a href="https://tiborsimon.io/archives2.html#archives"><li class="pagination-button style1">2</li></a>
-        <li class="pagination-button style2" style="opacity: 0"><i class="fa fa-angle-double-right"></i></li>
+        <li class="pagination-button hidden"><i class="fa fa-angle-double-right"></i></li>
 </ul>
 
   </div>
