--- a/dsp/generating-sinusoid-signals/index.html
+++ b/dsp/generating-sinusoid-signals/index.html
@@ -28,6 +28,12 @@
   <meta property="article:tag" content="" />
   <meta property="article:author" content="Tibor Simon" />
 
+      <meta name="twitter:card" content="summary" />
+      <meta name="twitter:site" content="@tiborsimonio" />
+      <meta name="twitter:title" content="tiborsimon.io - Engineering with Passion" />
+      <meta name="twitter:description" content="A blog and portfolio about programming, engineering, electronics and music. Tibor, the host, is a graduated electrical engineer from Budapest." />
+      <meta name="twitter:image" content="https://tiborsimon.io/images/tibor4.jpg" />
+
 <script type="text/javascript" async
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=AM_CHTML"></script>
 </head>
