--- a/python/collect-all-nouns-in-hungarian/index.html
+++ b/python/collect-all-nouns-in-hungarian/index.html
@@ -509,6 +509,19 @@ s.setAttribute('data-timestamp', +new Date());
       <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8" async></script>
   <script type="text/javascript" src="http://tiborsimon.disqus.com/count.js" id="dsq-count-scr" async></script>
 
+  <script type="text/javascript">
+    var addthis_share = addthis_share || {}
+    addthis_share = {
+      passthrough : {
+        twitter: {
+          via: "tiborsimonio",
+          text: "<p>I had to create a searchable noun list in ....."
+        }
+      }
+    }
+  </script>
+
+
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
