--- a/tags.html
+++ b/tags.html
@@ -1696,16 +1696,16 @@
 
     <!-- Scripts -->
       <script type="text/javascript" src="https://tiborsimon.io/theme/js/bundle.min.js" charset="utf-8" async></script>
-      <script type="text/javascript">
-        var addthis_share = addthis_share || {}
-        addthis_share = {
-        	passthrough : {
-        		twitter: {
-        			via: "tiborsimonio",
-        			text: "A blog and portfolio about programming, engineering, electronics and music. Tibor, the host, is a graduated electrical engineer from Budapest."
-        		}
-        	}
-        }
+        <script type="text/javascript">
+          var addthis_share = addthis_share || {}
+          addthis_share = {
+          	passthrough : {
+          		twitter: {
+          			via: "tiborsimonio",
+          			text: "A blog and portfolio about programming, engineering, electronics and music."
+          		}
+          	}
+          }
         </script>
 
       <script>
